
[January 2010 ]

scid-4.2
==========
- Features :
------------
- Training -> Find best move : make it more user friendly :
	* The next moves are automaticaly hidden in PGN window and in game info window
	* Added buttons above the board to show solution, go to next / previous exercise
	* Leave the training mode by unchecking the menu entry
- updated swedish translation (thanks to Hans Eriksson)
- updated spanish translation (thanks to Pedro Reina)
- Scid Pocket : added Stockfish 1.6.2 ported to ARM (Windows Mobile)
- Fixes :
---------
- Scid has a limit of 16 millions games per base. Before reaching this limit, the size of the game file could exceed 2 GB, which was not possible on 32 bit systems. So now some of Scid's IO handle large files (64 bit I/O system calls even on 32 bit systems) (but the limit for the game file is still 4 GB, given that games offsets are saved as unsigned integers). So now it is possible to have bases that effectively contain up to 16 M games.
- FIDE changed the number of rating list per year. Add code to handle this properly. Maximum year for ratings added by spellchecker is _2010_. (Thanks to Joost 't Hart)
- Searching for !me (own games) was broken
- Xfcc passwords with XML entities were not handled correctly

scid-4.2.2
==========
This maintenance release reverts to 32 bits file I/O. Large file handling across many platforms seems a bit hard too achieve ...

[xxxx 2010 ]
scid-4.3
==========
- New features:
	* Correspondence Chess:
		- Allow observation of games on ICCF webchess
		- Add connector file support to configure game relay from the internet
	* Update board in comment editor with current position while the comment editor is left open. (Joost t' Haart)
- Fixes :
---------
- Fixed a bug in exception handling of Novag Citrine connection
- Improve some of the programs icons based on GNOME Stock Icons in case png-support is available